--- a/views/Thankyou.ejs
+++ b/views/Thankyou.ejs
@@ -2,5 +2,5 @@
 <p>Thank you shopping <%= username %>
 <% } else {%>
 
-<P>thanks for shopping with us</p>
+<p>thanks for shopping with us</p>
 <% } %>
